# pm4py-mcp

./: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  inspector-nightly.yml  publish.yml
examples/: order-management.jsonocel  running-example.xes
scripts/: download_benchmark_logs.py  generate_example_log.py  generate_example_ocel.py  smoke_test_wheel.py
src/pm4py_mcp/: __init__.py  __main__.py  _matplotlib.py  _paths.py  _time.py  _tokens.py  errors.py  models.py  registry.py  server.py  viz.py  workspace.py
src/pm4py_mcp/prompts/: __init__.py  _shared.py  bottleneck_analysis.py  conformance_workflow.py  executive_summary.py  new_log_onboarding.py  ocel_flattening_workflow.py  organizational_analysis.py  variant_exploration.py
src/pm4py_mcp/tools/: __init__.py  abstractions.py  conformance.py  context.py  conversions.py  discovery.py  filters.py  io.py  ocel_discovery.py  ocel_filters.py  ocel_io.py  ocel_visualization.py  org_mining.py  reports.py  simulation.py  stats.py  visualization.py
tests/: conftest.py  fixtures.py  test_in_process.py  test_paths.py  test_prompts_mcp.py  test_registry.py  test_stdio_subprocess.py  test_tools_abstractions.py  test_tools_conformance.py  test_tools_context.py  test_tools_conversions.py  test_tools_discovery.py  test_tools_filters.py  test_tools_io.py  test_tools_mcp.py  test_tools_ocel_discovery.py  test_tools_ocel_filters.py  test_tools_ocel_io.py  test_tools_ocel_visualization.py  test_tools_org_mining.py  test_tools_reports.py  test_tools_simulation.py  test_tools_stats.py  test_tools_visualization.py  test_unit.py  test_viz_budget.py  test_workflow_ocel_stdio.py  test_workflow_phase3_stdio.py  test_workflow_stdio.py  test_workspace.py
